log
Thu 16 May 2024 08:13:09 PM UTC: 
 tests:  0|5
total_score: 0/70
0c50818
Thu 16 May 2024 08:39:58 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d0fcf25
Thu 16 May 2024 08:41:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a9b0ea3
Thu 16 May 2024 08:41:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c65a7a2
Thu 16 May 2024 08:41:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
704c154
Thu 16 May 2024 08:42:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1e42613
Thu 16 May 2024 08:44:48 PM UTC: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
d53e28b
Thu 16 May 2024 08:46:17 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1ba906a
Thu 16 May 2024 08:48:59 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
2adbeef
Thu 16 May 2024 08:51:33 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
7d1af71
Thu 16 May 2024 08:56:57 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4055b89
Thu 16 May 2024 08:59:18 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
964d608
Thu 16 May 2024 09:02:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
15fc935
Thu 16 May 2024 09:03:11 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2b5890e
Thu 16 May 2024 09:07:35 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3e7e84c
Thu 16 May 2024 09:08:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ad8ceac
Thu 16 May 2024 09:14:24 PM UTC: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:22: error: ‘Node’ has no member named ‘sumo’; did you mean ‘sudo’?
   60 |                if(n->sumo[i][j] == 0)
      |                      ^~~~
      |                      sudo
Compilation failed
07f0838
Thu 16 May 2024 09:14:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
077bb6f
Thu 16 May 2024 09:14:37 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
da053be
Thu 16 May 2024 09:15:03 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
88cb193
Thu 16 May 2024 09:16:38 PM UTC: 
 sudoku.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  2|4
total_score: 15/70
3a59ac8
Thu 16 May 2024 09:29:00 PM UTC: 
 sudoku.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:21: error: ‘nodo’ undeclared (first use in this function)
   52 |        printf("%d ",nodo->sudo[i][j]);
      |                     ^~~~
sudoku.c:52:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:51:12: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
   51 |        int j=3*(k%3) + (p%3) ;
      |            ^
sudoku.c:50:12: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
   50 |        int i=3*(k/3) + (p/3) ;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
7054a49
Thu 16 May 2024 09:29:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
741b4f1
Thu 16 May 2024 09:31:03 PM UTC: 
 sudoku.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
6fc59e4
Thu 16 May 2024 09:46:27 PM UTC: 
 sudoku.c | 48 +++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 41 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 45/70
7ad1896
Thu 16 May 2024 09:47:54 PM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c:46:15: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   46 | int es_valido(Nodo* n) {
      |               ^~~~
      |               Node
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:81:23: error: implicit declaration of function ‘is_valid’ [-Werror=implicit-function-declaration]
   81 |                   if (is_valid(adj)) {
      |                       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e3f8361
Thu 16 May 2024 09:48:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
7e08da9
Thu 16 May 2024 09:52:40 PM UTC: 
 sudoku.c | 42 ++++++++++++++++++++++--------------------
 1 file changed, 22 insertions(+), 20 deletions(-)
 tests:  6|2
total_score: 45/70
50a2006
